Fix sns icons overlap problem

--- a/assets/scss/common.scss
+++ b/assets/scss/common.scss
@@ -32,6 +32,7 @@ ul {
 
 a {
   text-decoration: none;
+  cursor: pointer;
 }
 
 .container {
